--- a/tests/server/packet/serializer/CMakeLists.txt
+++ b/tests/server/packet/serializer/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(SerializerTests SerializerTests.cpp)
-target_link_libraries(SerializerTests Packet GTest::gtest GTest::gtest_main)
+target_link_libraries(SerializerTests Packet GTest::gtest GTest::gtest_main gcov)
 add_test(NAME SerializerTests COMMAND SerializerTests)
