--- a/tests/common/ECS/CMakeLists.txt
+++ b/tests/common/ECS/CMakeLists.txt
@@ -2,5 +2,5 @@ add_subdirectory(component)
 add_subdirectory(system)
 
 add_executable(RegistryTests RegistryTests.cpp)
-target_link_libraries(RegistryTests ECS PREFAB COLLISION_RULES GTest::gtest GTest::gtest_main)
+target_link_libraries(RegistryTests ECS PREFAB COLLISION_RULES GTest::gtest GTest::gtest_main gcov)
 add_test(NAME RegistryTests COMMAND RegistryTests)
