--- a/tests/common/Error/CMakeLists.txt
+++ b/tests/common/Error/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(ErrorTest ErrorTests.cpp)
-target_link_libraries(ErrorTest ECS PREFAB COLLISION_RULES PARSER GTest::gtest GTest::gtest_main)
+target_link_libraries(ErrorTest ECS PREFAB COLLISION_RULES PARSER GTest::gtest GTest::gtest_main gcov)
 add_test(NAME ErrorTest COMMAND ErrorTest)
