--- a/tests/server/buffer/CMakeLists.txt
+++ b/tests/server/buffer/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(BufferTests CircularBufferTest.cpp)
-target_link_libraries(BufferTests Buffer GTest::gtest GTest::gtest_main)
+target_link_libraries(BufferTests Buffer GTest::gtest GTest::gtest_main gcov)
 add_test(NAME BufferTests COMMAND BufferTests)
