refactor(actions): simplify unit test execution by removing redundant checks

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -227,10 +227,7 @@ jobs:
       - name: RUN UNIT TESTS
         run: |
           chmod +x ./scripts/run_unit_tests.sh
-          ./scripts/run_unit_tests.sh | tee test_output.log
-          if grep -q "No tests were found!!!" test_output.log; then
-            exit 1
-          fi
+          ./scripts/run_unit_tests.sh
 
       - name: SHOW CCACHE STATS
         run: ccache --show-stats
