refactor(tests): add coverage build option and update test linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,8 +48,11 @@ if(WIN32)
     add_definitions(-D_WIN32_WINNT=0x0A00)
     add_definitions(-DWIN32_LEAN_AND_MEAN)
 endif()
+
 find_package(nlohmann_json CONFIG REQUIRED)
+
 option(BUILD_TESTS "Build unit tests" OFF)
+option(BUILD_COVERAGE "Build coverage" OFF)
 option(BUILD_CLIENT "Build client and multimedia library" ON)
 option(BUILD_SERVER "Build server" ON)
 
