--- a/tests/common/ECS/CMakeLists.txt
+++ b/tests/common/ECS/CMakeLists.txt
@@ -2,5 +2,8 @@ add_subdirectory(component)
 add_subdirectory(system)
 
 add_executable(RegistryTests RegistryTests.cpp)
-target_link_libraries(RegistryTests ECS PREFAB COLLISION_RULES GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(RegistryTests ECS PREFAB COLLISION_RULES GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(RegistryTests gcov)
+endif()
 add_test(NAME RegistryTests COMMAND RegistryTests)
