--- a/tests/common/Error/CMakeLists.txt
+++ b/tests/common/Error/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(ErrorTest ErrorTests.cpp)
-target_link_libraries(ErrorTest ECS PREFAB COLLISION_RULES PARSER GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(ErrorTest ECS PREFAB COLLISION_RULES PARSER GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(ErrorTest gcov)
+endif()
 add_test(NAME ErrorTest COMMAND ErrorTest)
