--- a/tests/server/packet/serializer/CMakeLists.txt
+++ b/tests/server/packet/serializer/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(SerializerTests SerializerTests.cpp)
-target_link_libraries(SerializerTests Packet GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(SerializerTests Packet GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(SerializerTests gcov)
+endif()
 add_test(NAME SerializerTests COMMAND SerializerTests)
