--- a/tests/server/utils/CMakeLists.txt
+++ b/tests/server/utils/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(UtilsFuncTests UtilsFuncTest.cpp)
-target_link_libraries(UtilsFuncTests r-type_server_lib GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(UtilsFuncTests r-type_server_lib GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(UtilsFuncTests gcov)
+endif()
 add_test(NAME UtilsFuncTests COMMAND UtilsFuncTests)
