--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,9 @@
 find_package(GTest REQUIRED)
 
-add_compile_options(-g -O0 --coverage -fno-inline)
-add_link_options(--coverage)
+if(BUILD_COVERAGE)
+    add_compile_options(-g -O0 --coverage -fno-inline)
+    add_link_options(--coverage)
+endif()
 
 add_subdirectory(server)
 add_subdirectory(common)
