--- a/tests/common/Prefab/CMakeLists.txt
+++ b/tests/common/Prefab/CMakeLists.txt
@@ -1,7 +1,13 @@
 add_executable(APrefabTests APrefabTests.cpp)
-target_link_libraries(APrefabTests PREFAB ECS COLLISION_RULES GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(APrefabTests PREFAB ECS COLLISION_RULES GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(APrefabTests gcov)
+endif()
 add_test(NAME APrefabTests COMMAND APrefabTests)
 
 add_executable(EntityPrefabManagerTests EntityPrefabManagerTests.cpp)
-target_link_libraries(EntityPrefabManagerTests PREFAB ECS COLLISION_RULES GTest::gtest GTest::gtest_main gcov)
+target_link_libraries(EntityPrefabManagerTests PREFAB ECS COLLISION_RULES GTest::gtest GTest::gtest_main)
+if(BUILD_COVERAGE)
+    target_link_libraries(EntityPrefabManagerTests gcov)
+endif()
 add_test(NAME EntityPrefabManagerTests COMMAND EntityPrefabManagerTests)
