--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,13 @@ option(USE_UNITY_BUILD "Use Unity Build to speed up compilation" ON)
 if(USE_UNITY_BUILD)
     # Don't enable globally - we'll enable it per-target to avoid static library conflicts
     set(CMAKE_UNITY_BUILD OFF)
-    set(CMAKE_UNITY_BUILD_BATCH_SIZE 16)
+    # Reduce batch size in CI to save memory
+    if(DEFINED ENV{CI} OR DEFINED ENV{GITHUB_ACTIONS})
+        set(CMAKE_UNITY_BUILD_BATCH_SIZE 8)
+        message(STATUS "CI detected: Unity Build batch size reduced to ${CMAKE_UNITY_BUILD_BATCH_SIZE}")
+    else()
+        set(CMAKE_UNITY_BUILD_BATCH_SIZE 16)
+    endif()
     message(STATUS "Unity Build will be enabled for executables and shared libraries only")
     message(STATUS "Unity Build batch size: ${CMAKE_UNITY_BUILD_BATCH_SIZE}")
 endif()
