--- a/client/gsm/states/scenes/CMakeLists.txt
+++ b/client/gsm/states/scenes/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(HowToPlay)
 add_subdirectory(Connection)
 add_subdirectory(Leaderboard)
 add_subdirectory(Chat)
+add_subdirectory(Credits)
